fix: Adjust dropdown overflow behavior for improved usability

--- a/style.css
+++ b/style.css
@@ -186,8 +186,9 @@ select option {
   list-style: none;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
-  height: calc(100vh - 340px); /* Sync with complete version height */
+  overflow: auto;
+  height: calc(
+    100vh - 340px); /* Sync with complete version height */
 }
 
 .transaction-item {
